# hazm

./: .gitignore  .pre-commit-config.yaml  .travis.yml  404.html  CHANGELOG.md  CODING.md  CONTRIBUTING.md  CONTRIBUTION.md  Coding.md  LICENSE  README.md  README.txt  comments_normalizer.py  custom-style.css  data.py  demo.html  draft.py  fabfile.py  format_docstrings.py  index.html  input.txt  mkdocs.yml  mkdocs_macros.py  normalizer-test-cases.txt  output.txt  package-lock.json  params.json  pyproject.toml  requirements.txt  sample.py  script.py  setup.py  sitemap.xml  test-normalizer.py  test.conll  test.conllu  tests.py  worked_as_expected.txt
.github/workflows/: build-documentation.yml  build_docs.yml  doc.yml  docs-builder.yml  format-code.yml  format.yml  lint.yml  need-reply-remove.yml  needs-reply.yml  pep8-formatter.yml  pep8_formatter  pep8_formatter.yml  publish  publish-test.yml  publish.yml  sync-dev.yml  test.yml  tests  tests.yml  update_docs.yml
Code/: TurnSemiSpaceFileToSpaceFile.py  output-dev-broken.txt  output-dev-formal.txt  output-test-broken.txt  output-test-formal.txt  shekasteh-dev.tok.broken  shekasteh-dev.tok.formal  shekasteh-test.tok.broken  shekasteh-test.tok.formal  standardize.py
content/WikiExtractor/: index.html
content/modules/: index.html
content/modules/Chunker/: index.html
content/modules/DependencyParser/: index.html
content/modules/InformalNormalizer/: index.html
content/modules/Lemmatizer/: index.html
content/modules/Normalizer/: index.html
content/modules/POSTagger/: index.html
content/modules/SentenceTokenizer/: index.html
content/modules/SequenceTagger/: index.html
content/readers/: index.html
content/utils/: index.html
corpora/: MirasText.txt  README.md  bijankhan.txt  dadegan.conll  dadegan.conllu  persica.csv  quranic_corpus_morphology.txt  valency.txt
corpora/degarbayan/: CorpusPair.xml  corpus_pair.xml
corpora/peykare/: 0001.txt
corpora/sentipers/: Motorola Digital Photo Frame MF700.xml  motorola_digital_photo_frame_MF700.xml
corpora/treebank/: book.xml
demo/: index.html
docs/: CNAME  custom-style.css  genindex.html  hazm.html  index.html  index.md  modules.html  objects.inv  py-modindex.html  searchindex.js  setup.html  tests.html
docs/css/: demo.css  donation_modal.css  highlight_code.css  main.css  ommidvar.css  tree.css
docs/demo/: index.html
docs/docs/: .buildinfo  404.html  custom-style.css  data.html  genindex.html  hazm.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js  setup.html  sitemap.xml  tests.html
docs/fonts/: font_face.css
docs/js/: donation_modal.js
docs/sources/: data.rst.txt  modules.rst.txt
docs/static/: websupport.js
documentation/: custom-style.css  index.md
documentation/content/: in-other-languages.md  utils.md
fonts/: BMitra.eot  BMitraBold.eot
hazm/: BijankhanReader.py  Chunker.py  DadeganReader.py  DegarbayanReader.py  DependencyParser.py  Embedding.py  HamshahriReader.py  InformalNormalizer.py  Lemmatizer.py  MirasTextReader.py  Normalizer.py  POSTagger.py  PersianPlainTextReader.py  PersicaReader.py  PeykareReader.py  QuranCorpusReader.py  SentenceTokenizer.py  SentiPersReader.py  SequenceTagger.py  StatementTokenizer.py  Stemmer.py  StopWord.py  TNewsReader.py  TokenSplitter.py  Tokenizer.py  TreebankReader.py  VerbValencyReader.py  WikiExtractor.py  WikipediaReader.py  WordTokenizer.py  __init__.py  __main__.py  chunker.py  dependency_parser.py  embedding.py  informal_normalizer.py  lemmatizer.py  ner.py  normalizer.py  pos_tagger.py  (+6 more)
hazm/CorpusReaders/: BijankhanReader.py  DadeganReader.py  DegarbayanReader.py  HamshahriReader.py  MirasTextReader.py  PersianPlainTextReader.py  PersicaReader.py  PeykareReader.py  QuranCorpusReader.py  SentiPersReader.py  TNewsReader.py  TreebankReader.py  WikiExtractor.py  WikipediaReader.py  __init__.py
hazm/cli/: __init__.py  base.py  clear.py  download.py
hazm/corpus_readers/: __init__.py  arman_reader.py  bijankhan_reader.py  dadegan_reader.py  degarbayan_reader.py  faspell_reader.py  hamshahri_reader.py  mirastext_reader.py  mizan_reader.py  naab_reader.py  ner_reader.py  persian_plain_text_reader.py  persica_reader.py  peykare_reader.py  pn_summary_reader.py  quran_reader.py  sentipers_reader.py  tnews_reader.py  treebank_reader.py  universal_dadegan_reader.py  verbvalency_reader.py  wiki_extractor.py  wikipedia_reader.py
javascripts/: main.js
resources/: README.md  WikiExtractor.py  malt-features.xml  malt-options.xml  stanford-postagger.props
samples/: keywordExtraction.py  keyword_extraction.py
samples/markdown_files/: keyword_extraction.md
search/: search_index.json
site/: 404.html  custom-style.css  hint.min.css  index.html  objects.inv
site/assets/: _mkdocstrings.css
site/content/: WikiExtractor.md  in-other-languages.md  utils.md
site/css/: bootstrap.min.css  demo.css  donation_modal.css  highlight_code.css  main.css
site/demo/: index.html
site/docs/: 404.html  data.html  genindex.html  hazm.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js  setup.html  sitemap.xml  tests.html
site/fonts/: font_face.css
site/js/: bootstrap.min.js  donation_modal.js  jquery.min.js
site/search/: search_index.json
site/theme/: 404.html
stylesheets/: main.css
tests/: conftest.py  test_chunker.py  test_dependency_parser.py  test_embedding.py  test_lemmatizer.py  test_normalizer.py  test_pos_tagger.py  test_sentence_tokenizer.py  test_stemmer.py  test_token_splitter.py  test_utils.py  test_word_tokenizer.py
tests/corpus_readers/: test_arman_reader.py  test_bijankhan_reader.py  test_dadegan_reader.py  test_degarbayan_reader.py  test_faspell_reader.py  test_hamshahri_reader.py  test_mirastext_reader.py  test_mizan_reader.py  test_naab_reader.py  test_ner_reader.py  test_persica_reader.py  test_peykare_reader.py  test_pn_summary_reader.py  test_quran_reader.py  test_sentipers_reader.py  test_tnews_reader.py  test_treebank_reader.py  test_universal_dadegan_reader.py  test_wikipedia_reader.py
(+281 files in other folders)
