[tool.poetry]
name = "hazm"
version = "0.9.0"
description = "Persian NLP Toolkit"
authors = ["Roshan <salam@roshan-ai.com>"]
maintainers = ["Roshan <salam@roshan-ai.com>"]
license = "MIT"
readme = "README.md"
include = ["data/*"]

classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Text Processing",
    "Natural Language :: Persian",
]

homepage = "https://roshan-ai.ir/hazm/"
repository = "https://github.com/roshan-research/hazm/"
documentation = "https://roshan-ai.ir/hazm/docs/"
keywords = ["nlp", "persian nlp", "persian"]

[tool.poetry.urls]
"Demo" = "https://www.roshan-ai.ir/hazm/demo/"
"Changelog" = "https://github.com/roshan-research/hazm/blob/master/CHANGELOG.md"
"Contribution" = "https://github.com/roshan-research/hazm/blob/master/CONTRIBUTION.md"
"Issues" = "https://github.com/roshan-research/hazm/issues"
"Join-us" = "https://www.roshan-ai.ir/join-us/"

[tool.poetry.dependencies]
python= ">=3.8"
nltk="^3.8.1"
gensim="^4.3.1"
python-crfsuite="^0.9.9"
numpy = "^1.24.3"
scikit-learn = "^1.2.2"

[tool.poetry.group.docs.dependencies]
mkdocs="^1.4.3"
mkdocs-material="^9.1.11"
pymdown-extensions="^9.11"
mkdocs-glightbox="^0.3.4"
mkdocstrings = "^0.21.2"
mkdocstrings-python = "^1.0.0"


[tool.poetry.group.docs]
optional=true

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pandas = "2.0.1"
#pre-commit = "*"
poethepoet = "^0.20.0"

[tool.poetry.group.typing.dependencies]
#mypy = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py38"
line-length = 120
extend-select = [
    "F",
    "E",
    "W",
    "C90",
    "I",
    "N",
    "D",
    "UP",
    "YTT",
    "ANN",
    "S",
    "BLE",
    "FBT",
    "B",
    "A",
    "COM",
    "C4",
    "DTZ",
    "EM",
    "EXE",
    "ISC",
    "ICN",
    "G",
    "INP",
    "PIE",
    "T20",
    "PYI",
    "PT",
    "Q",
    "RSE",
    "RET",
    "SLF",
    "SIM",
    "TID",
    "TCH",
    "INT",
    "ARG",
    "PTH",
    "ERA",
    "PD",
    "PGH",
    "PL",
    "PLC",
    "PLE",
    "PLR",
    "PLW",
    "TRY",
    "NPY",
    "RUF",   
]
ignore=["RUF001","RUF002","RUF003", "D205"]

fix=true
format = "grouped"
ignore-init-module-imports = true
namespace-packages = ["hazm"]
show-fixes = true
show-source = true

[tool.ruff.per-file-ignores]
"data.py"=["ALL"] # temporary
"wiki_extractor.py"=["ALL"] # temporary

[tool.ruff.isort]
force-single-line = true

[tool.ruff.pydocstyle]
convention = "google"

[tool.black]
target-version = ['py38']
preview = true

[tool.pytest.ini_options]
addopts = """
--ignore=hazm/sequence_tagger.py
--ignore=hazm/corpus_readers/treebank_reader.py
--ignore=hazm/corpus_readers/wikipedia_reader.py
--ignore=hazm/corpus_readers/Wiki_extractor.py
--ignore=hazm/embedding.py
"""
filterwarnings = "ignore::DeprecationWarning"

[tool.poe.tasks]
test = "pytest --doctest-modules --doctest-continue-on-failure ${py_file}"