[tool.poetry]
name = "hazm"
version = "0.9.0"
description = "Persian NLP Toolkit"
authors = ["Roshan <salam@roshan-ai.com>"]
maintainers = ["Roshan <salam@roshan-ai.com>"]
license = "MIT"
readme = "README.md"
include = ["data/*"]

classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Text Processing",
    "Natural Language :: Persian",
]

homepage = "https://roshan-ai.ir/hazm/"
repository = "https://github.com/roshan-research/hazm/"
documentation = "https://roshan-ai.ir/hazm/docs/"
keywords = ["nlp", "persian nlp", "persian"]

[tool.poetry.urls]
"Demo" = "https://www.roshan-ai.ir/hazm/demo/"
"Changelog" = "https://github.com/roshan-research/hazm/blob/master/CHANGELOG.md"
"Contribution" = "https://github.com/roshan-research/hazm/blob/master/CONTRIBUTION.md"
"Issues" = "https://github.com/roshan-research/hazm/issues"
"Join-us" = "https://www.roshan-ai.ir/join-us/"

[tool.poetry.dependencies]
python= ">=3.8"
nltk="^3.8.1"
gensim="^4.3.1"
python-crfsuite="^0.9.9"
numpy = "^1.24.3"
scikit-learn = "^1.2.2"

[tool.poetry.group.docs.dependencies]
mkdocs="^1.4.3"
mkdocs-material="^9.1.11"
pymdown-extensions="^9.11"
mkdocs-glightbox="^0.3.4"
mkdocstrings = "^0.21.2"
mkdocstrings-python = "^1.0.0"


[tool.poetry.group.docs]
optional=true

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pandas = "2.0.1"
#pre-commit = "*"
poethepoet = "^0.20.0"

[tool.poetry.group.typing.dependencies]
#mypy = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py38"
#line-length = 120
extend-select = [
    "F",
    "E",
    "W",
    "C90",
    "I",
    "N",
    "D",
    "UP",
    "YTT",
    "ANN",
    # "S",
    # "BLE",
    #"FBT",
    "B",
    "A",
    "COM",
    "C4",
    "DTZ",
    "EM",
    "EXE",
    "ISC",
    "ICN",
    "G",
    "INP",
    "PIE",
    #"T20",
    "PYI",
    "PT",
    "Q",
    "RSE",
    "RET",
    "SLF",
    "SIM",
    "TID",
    "TCH",
    "INT",
    "ARG",
    "PTH",
    "ERA",
    "PD",
    "PGH",
    "PL",
    "PLC",
    "PLE",
    "PLR",
    "PLW",
    "TRY",
    "NPY",
    "RUF",
]
ignore=[
"RUF001", # String contains ambiguous unicode character
"RUF002", # Docstring contains ambiguous unicode character
"RUF003", # Comment contains ambiguous unicode character
"D205", # 1 blank line required between summary line and description in docstring
"E501", # Line too long
"F401", # imported but unused; consider adding to `__all__` or using a redundant alias
"TID252", # Relative imports from parent modules are banned
"PLR0913", # Too many arguments to function call
"D107", # Missing docstring in `__init__`
"ANN001", # Missing type annotation for function argument
"ANN201", # Missing return type annotation for public function
"ANN202", # Missing return type annotation for private function
"PLR0912", # Too many branches
"PLR0915", # Too many statements
"PLR0911", # Too many return statements
"C901", # Too complex
"PLR2004", # Magic value used in comparison, consider replacing 4 with a constant variable
"E722", # Do not use bare `except`
"PLW2901", # `for` loop variable `{variable name}` overwritten by assignment target
"TRY002", # Create your own exception

]

fix=true
ignore-init-module-imports = true
namespace-packages = ["hazm"]
show-fixes = true

[tool.ruff.per-file-ignores]
"data.py"=["ALL"] # temporary
"wiki_extractor.py"=["ALL"] # temporary

[tool.ruff.isort]
force-single-line = true

[tool.ruff.pydocstyle]
convention = "google"

[tool.black]
target-version = ['py38']
preview = true

[tool.pytest.ini_options]
addopts = """
--ignore=hazm/sequence_tagger.py
--ignore=hazm/corpus_readers/treebank_reader.py
--ignore=hazm/corpus_readers/wikipedia_reader.py
--ignore=hazm/corpus_readers/Wiki_extractor.py
--ignore=hazm/embedding.py
"""
filterwarnings = "ignore::DeprecationWarning"

[tool.poe.tasks]
# poetry poe test
# poetry poe test hazm/normalizer.py
test = "pytest --doctest-modules --doctest-continue-on-failure ${py_file}"

# poetry poe lint
# poetry poe lint -t hazm/normalizer.py
[tool.poe.tasks.lint]
cmd  = "ruff check ${target_dir}"
args = { target_dir = { options = ["--target", "-t"], default = "." }}
